[package]
name = "minesweeper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
bevy = "0.10.1"
# ↓ Recommended when developing to increase build speed significantly
# bevy = { version = "0.10.1", features = ["dynamic_linking"] }

[profile.dev]
codegen-units = 1024
opt-level = "z"

[profile.release]
codegen-units = 1
opt-level = "z"
strip = true
lto = true
